<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DongDemo</string>

    <!-- Main -->
    <string name="navigation_original">Original</string>
    <string name="navigation_library">Library</string>
    <string name="navigation_component">Component</string>
    <string name="navigation_ui">User Interface</string>
    <string name="navigation_text">Text</string>
    <string name="navigation_animation">Animation</string>
    <string name="navigation_sensor">Sensor</string>
    <string name="navigation_storage">Storage</string>
    <string name="navigation_other">Other</string>
    <string name="action_settings">Settings</string>

    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="more">更多</string>

    <!-- Test -->
    <string name="test_card_content">雪从本质上说是怀旧的……它覆盖住了现实，一片片地，将当下慢慢擦除，于是给过去腾出了空间。</string>

    <!-- DRecyclerView -->
    <string name="footer_text_loadmore">LOAD MORE</string>
    <string name="footer_text_end">THE END</string>
    <string name="ok">确定</string>

    <!-- Xlist -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <!-- Record -->
    <string name="recorder_normal">按住 说话</string>
    <string name="recorder_recording">松开 结束</string>
    <string name="recorder_want_cancel">松开手指，取消发送</string>
    <string name="recorder_dialog_recording">手指上滑，取消发送</string>
    <string name="recorder_dialog_too_short">录音时间太短</string>

    <!-- Menu -->
    <string name="menu_item_clear_memory_cache">Clear memory cache</string>
    <string name="menu_item_clear_disc_cache">Clear disc cache</string>

    <string-array name="countries_array">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
    </string-array>

</resources>